@@ -24,7 +24,6 @@ import uk.gov.hmcts.reform.hmc.model.unnotifiedhearings.PartiesNotifiedServiceDa
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -1228,8 +1227,7 @@ class HmcDataUtilsTest {
             .hearingId(Long.valueOf(hearingId))
             .hearingRequestDateTime(hearingRequestTime)
             .hearingDaySchedule(startTimes.stream().map(startTime -> HearingDaySchedule.builder().hearingStartDateTime(
-                startTime).build()).collect(
-                Collectors.toList()))
+                startTime).build()).toList())
             .build();
     }
 }
